[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "taskiq-kombu"
version = "0.1.0"
description = "Kombu integration for taskiq"
authors = [{ name = "Alex Kondratev", email = "soapun@ya.ru" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
  "taskiq",
  "tasks",
  "distributed",
  "async",
  "kombu",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "kombu>=5.5.4",
    "taskiq>=0.11.18",
]

[project.urls]
Repository = "https://github.com/soapun/taskiq-kombu"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=7.2.2",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.4",
    "sqlalchemy>=2.0.43",
]

[tool.mypy]
python_version = "3.9"
strict = false
pretty = true
show_error_codes = true
warn_unused_configs = true
ignore_missing_imports = true

exclude = [
  "examples",
  "build/",
  "dist/"
]

# Allow untyped definitions in test files
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

# Allow untyped external imports
[[tool.mypy.overrides]]
module = [
    "kombu.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = [".venv/"]

[tool.ruff.lint.isort]
known-first-party = ["taskiq_kombu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.build-backend]
module-name = "taskiq_kombu"
module-root = "."
